# hsikit

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  TODO.md  pyproject.toml  requirements.txt
hsikit/: __init__.py  base_utils.py  bg_removal.py  binary_masks.py  classes.py  cleaning.py  extractors.py  feature_extraction.py  feature_selection.py  hsi_io.py  io.py  masking_utility.py  preprocessing.py  sandbox.py  temp_bg_classes.py  visualizations.py
