[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsikit"
version = "0.2.0"
description = "Toolkit for hyperspectral image processing"
authors = [
    { name = "Luka Kopač", email = "luka.kopac@bf.uni-lj.si" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "scikit-image",
    "scipy",
    "plotly",
    "tifffile"
]

[project.urls]
Homepage = "https://github.com/LukaKopac/hsikit"
