[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hsikit"
version = "0.3.0"
description = "Toolkit for hyperspectral image processing"
authors = [
    { name = "Luka Kopač", email = "luka.kopac@bf.uni-lj.si" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = [
    "numpy>=2.2",
    "matplotlib>=3.10",
    "scikit-learn>=1.6",
    "scikit-image>=0.26",
    "scipy>=1.15",
    "plotly>=6.1",
    "tifffile>=2025.1"
]

[project.urls]
Homepage = "https://github.com/LukaKopac/hsikit"
